--- a/backend/package.json
+++ b/backend/package.json
@@ -3,14 +3,16 @@
     "version": "1.0.0",
     "main": "src/index.js",
     "scripts": {
-    "start": "node src/index.js"
+        "start": "node src/index.js",
+        "dev": "nodemon src/index.js"
     },
     "dependencies": {
-    "axios": "^1.4.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "node-cron": "^3.0.2",
-    "pg": "^8.10.0",
-    "sequelize": "^6.32.1"
+        "axios": "^1.4.0",
+        "cors": "^2.8.5",
+        "express": "^4.18.2",
+        "node-cron": "^3.0.2",
+        "nodemon": "^3.1.11",
+        "pg": "^8.10.0",
+        "sequelize": "^6.32.1"
     }
-    }
+}
