--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=4000
-DATABASE_URL=postgres://postgres:postgres@db:5432/blog
+DATABASE_URL=postgres://postgres:postgres@db:5432/blogdb
 AI_PROVIDER=free
